docs/sdd/SPEC-SUIYIN-ADMIN-052/1.2.0/spec.md
---
spec_id: SPEC-SUIYIN-ADMIN-052
title: "所有租户销售变声统计与菜单管理同步"
version: 1.2.0
status: implemented
level: L2
project: "suiyin-admin HTML prototype"
surface: "Admin"
tenants: "当前登记的全部十五租户"
owner: "房总"
author: "Codex"
constitution: "prototype-sdd@1.4.1"
depends_on_specs: "SPEC-SUIYIN-ADMIN-051@1.1.0"
last_updated: 2026-09-20
---

> 本轮变更（2026-09-20，1.2.0）：房总在上一轮发布完成后明确要求“销售变声统计上面的筛选，保持和销售使用统计完全一致”。这是当前筛选行为调整的直接 USER 授权，取代旧版本“直接区间、不显示单日/范围”的决策。同步当前销售使用统计的控件、排列和交互；独立任务首次成功计次、日期来源、租户/权限及菜单边界不变。状态 implemented：实现已安装并通过当前两页筛选一致性、15 租户及真实 Chrome 检查；证据见本目录 verification.md 的 1.2.0 记录。该验收比较本地两页，不声称真实线上全部像素一致；2026-09-20 房总最新指令“完整推送，并给陈宣宇在管理页代码仓建立 Issue 实现管理页销售变声统计的这个功能，提出环境深圳艺星，提出人ZHONG”授权本轮完整原型交付与销售变声统计工程建单。生产实施继续由目标代码仓正式工程流程完成。


# 所有租户销售变声统计与菜单管理同步

## 1. 审核摘要

- **用户问题**：管理者想了解各销售使用变声的次数，现有销售使用统计仅展示消息数和聊天好友数，无法直接回答；新增统计菜单还容易漏掉菜单管理中的对应项。
- **完成后变化**：所有租户可在「数据展示 → 销售变声统计」按日期、部门查看每位销售的变声使用次数，并在菜单管理中控制同一个入口。
- **本次范围**：当前十五租户的静态管理页原型；独立二级菜单、统计页、菜单管理和平台定义同步；固化 DR-095。
- **明确不做**：不新增租户环境、不接真实后台或修改生产实现、不添加销售考核/效果归因。本轮完整交付已获新的明确授权；生产实现仅生成工程 Handoff/Test Contract 和真实 Issue，由目标仓正式流程承接。
- **需要房总拍板**：无；Q001 已随“按这个方案做”批准。本次 E012 明确要求完整复用筛选，已直接确认 R002 的规则替换。
- **AI 新提案**：无未决提案；R003 已批准：独立任务首次成功生成计 1，同任务不重复计。

## 2. 用户问题与预期结果

### 2.1 用户与场景

- 用户：当前租户拥有统计查看权限的管理者。
- 场景：按单日或日期范围检查销售对变声功能的使用情况，并按部门缩小查看范围。
- 当前做法：销售使用统计能显示消息数和聊天好友数，未提供独立的销售变声次数。

### 2.2 用户问题

普通消息量无法代表变声使用量；侧栏新增入口若遗漏菜单管理，则配置与可见功能不一致。

### 2.3 可感知变化

管理者沿用熟悉的日期/部门查询方式，看到每位销售的变声次数，且能在菜单管理中找到并控制该统计入口。

### 2.4 成功信号

| ID | 可观察信号 | 判定方式 |
|---|---|---|
| O001 | 十五租户均存在并能打开销售变声统计 | 逐租户核验导航和路由 |
| O002 | 切换日期/部门后每位销售的次数与样本事实一致 | 固定 Mock 手工复算 |
| O003 | 菜单管理显示/隐藏与排序联动同租户侧栏 | 本地操作并核对另一租户 |

## 3. 范围

### 3.1 In Scope

- 在现有「销售使用统计」附近新增「销售变声统计」二级菜单；单独页面复用当前后台Shell及纠偏后统计页控件。
- 筛选完整复用当前销售使用统计：统计时间标签、单日/范围分段、对应日期输入和弹层、今天/昨天/前天、部门、搜索/重置/导出；控件顺序、尺寸、间距、颜色、图标及操作反馈一致。表格核心列仍为序号、销售、部门、变声使用次数。
- 同步导航、租户菜单库存及已有平台菜单定义，沿用当前菜单树操作和租户本地配置隔离。
- 本地合成 Mock 展示正常非零、零次数、无结果、失败与重试状态；来源明确标为演示。
- 记录 DR-095：数据展示新增二级菜单，同次必须增加对应菜单管理项。

### 3.2 Out of Scope

- Flutter / React / Go 等生产端实现，真实接口/埋点接入、线上菜单写入、历史数据回填和真实使用量查询。
- 批量为租户开通变声或替账号配置声音模型；不修改 DR-093。
- 新增环境、恢复上一轮明确排除环境；不改其他统计指标含义。
- 本工作区不执行生产实现或生产发布；工程 Issue 与指派已获本轮明确授权，见 §10.2。本次只更新新版本原型交付包，不改写旧版本快照。

### 3.3 适用矩阵

| 端 / 租户 | 是否适用 | 继承的 Profile | 差异 |
|---|---|---|---|
| Admin / 艺星深圳、成都、北京、广州、杭州、嘉兴 | 是 | Workspace Map §5；051@1.1.0 | 同一功能，本租户人员与部门 |
| Admin / 佰智德三、锦帛美学、萌爪、诚如风险管理事务所、厚全鸡蛋、柚子烘焙 | 是 | 同上 | 同一功能，本租户人员与部门 |
| Admin / 瑞熙小刘、小温、小周 | 是 | 同上 | 同一功能，本租户人员与部门 |
| PC / APP 聊天与生产管理后台 | 否 | 保持原合同 | 本轮不修改 |

稳定租户键依次为 yestar-sz、yestar、yestar-bj、yestar-gz、yestar-hz、yestar-jx、bzds、jbfs、mengzhua、crrm、hqjd、yzhb、ykjl、ruixi-kh-xiaowen、rxxz。“所有租户”指本原型已登记范围，不从其他平台目录自动扩展。

## 4. 证据与来源

| ID | 类型 | 来源 | 支持的结论 | 可信状态 |
|---|---|---|---|---|
| E001 | USER | 2026-09-20 本任务原始要求及附图 | 数据展示新增销售变声统计，统计各销售次数，类似销售使用统计；记录菜单管理同步 DR | confirmed |
| E002 | USER | 同任务补充：“范围扩大到所有租户” | 替代仅艺星范围 | confirmed |
| E003 | PROTO | suiyin-admin/prototype/data/content/yestar-sz.json 的 salesMessageUsage；admin-content.js；data/navigation-snapshot.json | 单日/范围、三项快捷日、部门、导出、销售/部门维度，十五租户范围 | observed |
| E004 | SPEC | prototype-sdd/specs/admin-live-reference-2026-09-18/full-content/spec.md，051@1.1.0 | 当前静态运行、菜单树、来源标识及租户隔离合同 | approved |
| E005 | DESIGN | suiyin-admin/docs/design-spec.md，2026-09-19 | 当前管理后台配色、筛选表格及菜单树样式 | confirmed |
| E006 | DR | suiyin-knowledge/decisions/DR-095-admin-data-display-menu-management-parity.md | 数据展示新增菜单必须同步管理项 | confirmed |
| E007 | DR | suiyin-knowledge/decisions/DR-093-voice-transform-display-requires-tenant-and-account-config.md | 全租户支持不等于所有账号已配置 | confirmed |
| E008 | USER | 2026-09-20 房总回复“按这个方案做”，批准已呈现方案及 Q001 | 按首次成功生成的独立任务计次，去除失败/重试重复/试听 | confirmed |

| E009 | USER | 2026-09-20 较早纠偏：设计规范照销售使用统计、颜色一致、无需单日和范围选项 | 当时采用直接区间；该日期模式决策现由 E012 替代，保留演进记录 | superseded |

| E010 | USER | 2026-09-20 对销售使用统计14类差异清单明确“全部对齐哈” | 更新参照页基准；当时未恢复变声日期模式的边界现由 E012 替代 | confirmed |

| E011 | USER | 2026-09-20 四张实站/原型对照图及本轮继续迭代、完整推送指令 | 使用统计主按钮直接采样为 #00c4af，变声沿用既有共享规范；不新增计数和菜单规则 | confirmed |

| E012 | USER | 2026-09-20 本轮：“销售变声统计上面的筛选，保持和销售使用统计完全一致” | 完整复用使用统计筛选，明确取代此前直接区间特例；不改变变声计数与数据归属 | confirmed |

| E013 | USER | 2026-09-20 房总最新指令“完整推送，并给陈宣宇在管理页代码仓建立 Issue 实现管理页销售变声统计的这个功能，提出环境深圳艺星，提出人ZHONG”授权本轮完整原型交付与销售变声统计工程建单。生产实施继续由目标代码仓正式工程流程完成。 | 完整交付与仅销售变声统计工程建单；元信息来自用户原文 | confirmed |

### 4.1 已发现冲突

- E012 是最新明确 USER 指令，取代 E009 及本规格 1.1.0–1.1.2 的“直接区间、不显示单日/范围”；当前恢复与销售使用统计一致的分段模式，日期控件随模式变化。颜色继续沿用 E011 的 #00c4af；R003 计数、R004 菜单与 R005 租户/权限不变。
- 053@1.0.1 §4.1 及 Plan 中“052直接区间决策不变”描述的是上一轮边界；本轮以 053@1.0.2 的最小文字 PATCH 收敛到 E012。053 使用统计自身 R/AC 不改，054/056 业务规则不改。
- 本轮完整推送同步当前 docs/design-spec.md、PRD/流程及 canonical 合同，见 source-convergence.md。已发布 052@1.1.2 / 053@1.0.1 等旧包保留不可变历史。当前 verification.md 的 1.2.0 记录与独立证据是本轮验证，不能以旧版本检查数代替。

- E002 明确取代 E001 中仅艺星的初始范围，采用全部十五租户。
- 当前销售使用统计已经有真实日期控件和分段模式。筛选结构与操作以该专用页面为本轮直接参照，不能复制历史通用 radio 值当日期的错误。控件一致不改写来源：变声演示基于运行日，使用统计基于本租户冻结样本日，不能用另一页样本代替当前指标。
- 既有菜单快照不含新入口，是本次新增覆盖；保留其采集时间与来源，不把新菜单伪装成原站实采事实。
- 未发现既有变声统计计数合同；不能用普通消息数或聊天好友数推断变声次数。Q001 已批准采用首次成功生成口径。
- DR-093 控制变声能力资格与消息展示，本统计入口覆盖所有租户不会取代该资格门槛。

### 4.2 精确规格依赖

| 依赖 | 用途 | 失效条件 |
|---|---|---|
| SPEC-SUIYIN-ADMIN-051@1.1.0 | 继承十五租户身份、静态运行、菜单树联动与来源隔离 | 父规格版本或批准状态变化 |

009/042 的 AI、触达统计不作为本页次数定义；本规格不继承它们的上线边界或算法。

## 5. 用户场景与验收

### US01 — 管理者查看本租户销售变声使用情况

- **前置条件**：处于本租户原型，现有菜单/父级允许显示。
- **目标与独立价值**：查询某日或一段时间各销售的变声次数。

#### AC-R001-01 — 所有租户入口完整

- Given 十五个登记租户与默认菜单配置。
- When 分别展开数据展示并打开销售变声统计。
- Then 均到达独立的销售变声统计页面，租户品牌/人员/部门对应正确，原销售使用统计仍保留。

#### AC-R002-01 — 日期和部门查询

- Given 日期跨两天、两个部门和多名销售的本租户 Mock。
- When 切换单日/范围、编辑日期与部门并搜索，再依次选择今天/昨天/前天和重置。
- Then 控件与销售使用统计的顺序、分段选中、日期弹层、快捷反馈及部门操作一致；单日只显示一个日期，范围显示起止日期；仅搜索或快捷日/重置提交查询；查询仅含所选含首尾自然日及部门。快捷日按 Asia/Shanghai 运行当日计算并立即查询；重置回单日、今天、全部授权部门和默认排序。

#### AC-R002-02 — 日期校验与全量导出

- Given 开始日期晚于结束日期或已得到多页查询结果。
- When 尝试查询非法日期，或对有效结果导出。
- Then 非法日期有明确错误且不覆盖上次结果；导出包含全部筛选结果及正确次数，不只导出当前页；取消选择不提交查询。

#### AC-R002-03 — 两页筛选完整一致

- Given 同租户、同视口的销售使用统计和销售变声统计。
- When 对照单日、范围、日期弹层、快捷日、部门展开、查询及重置状态。
- Then 筛选字段、顺序、分段与按钮文案、颜色/图标、尺寸/间距、焦点/禁用及取消行为一致；范围切到单日取开始日且起止归同日，编辑模式本身不提前提交；两页保留各自样本/合成日期来源，不借用对方数据。

#### AC-R003-01 — 次数去重与归属（已批准）

- Given 销售甲有任务 A 首次生成成功及重复成功回调、任务 B 失败后重试成功、任务 C 始终失败，任务 A 被试听两次；销售乙有任务 D 成功。
- When 查询覆盖全部成功时间的日期范围。
- Then 甲为 2 次、乙为 1 次；按触发该任务的销售归属，不按当前接待人或声音模型归属，发送是否成功不改变“生成成功”这一计数。

#### AC-R003-02 — 跨日与零值（已批准）

- Given 任务在前一日触发、后一日首次成功；另一名本范围销售没有成功任务；一名销售使用多个工作账号。
- When 分别查询两天和合并范围。
- Then 该任务只计入首次成功的自然日；确定没有成功任务的销售显示 0，多工作账号按稳定销售身份汇总；部门取事件发生时归属，避免转组后改写历史。

### US02 — 管理者配置菜单且不影响其他租户

#### AC-R004-01 — 导航与菜单库存同步

- Given 任一适用租户的完整菜单树及平台菜单定义（若适用）。
- When 查找销售变声统计，依次隐藏/恢复、调整排序并保存；另做一次取消。
- Then 同一名称/路由/父级的配置联动本租户侧栏，隐藏后库存仍可找回；取消无改动，其他租户配置不变。

#### AC-R005-01 — 无权限与租户隔离

- Given 两租户相同销售显示名，或本租户菜单/父级隐藏、权限不允许的状态。
- When 切换租户、直接打开路由或查询。
- Then 不拼接不同租户数据，状态不串用；沿用现有可见性和权限处理，不自动开启隐藏父级、不放宽授权；菜单库存与展示权限分开。

#### AC-R006-01 — 零、空、失败分别表达

- Given 有效零次数、有条件但无匹配销售、读取失败三个 Mock 状态。
- When 查询或重试。
- Then 分别显示 0、暂无数据、加载失败与重试；加载中禁用重复查询；失败不渲染为全部 0，重试沿用已提交条件。

#### AC-R007-01 — 静态边界与视觉

- Given 当前管理页样式及标明来源的合成数据。
- When 在 Chrome 打开新页及菜单树，检查表头、数值、筛选、滚动、键盘焦点与取消。
- Then 筛选主按钮、快捷日、表格和分页继承销售使用统计同一共享样式，来源可识别，无真实后台写入；日期查询/次数排序/本地导出可操作，不宣称为真实实时次数。

## 6. 业务规则

| ID | 规则 | 级别 | 来源 | Profile Override | 验收覆盖 |
|---|---|---|---|---|---|
| R001 | 所有十五租户数据展示下新增销售变声统计独立入口，位于销售使用统计附近；保留原入口。 | MUST | E001 E002 E004 | 无 | AC-R001-01 |
| R002 | 筛选完整复用当前销售使用统计：统计时间、单日/范围分段、相应日期输入/弹层、今天/昨天/前天、部门、搜索/重置/导出，视觉及操作反馈一致。单日隐藏结束输入并以起始日查询，范围显示两日；切回单日将结束归为开始日；草稿/模式变化不提交，快捷日和重置立即提交。自然日含首尾，结果按销售/部门聚合，次数数值排序、分页及导出仍使用同一筛选结果。 | MUST | E001 E003 E004 E012 | 日期沿用本页合成来源；部门仅本租户 | AC-R002-01、AC-R002-02、AC-R002-03 |
| R003 | 租户内独立变声任务首次成功生成计 1，按首次成功时间（Asia/Shanghai）和发起销售/事件部门归属；重复回调、同任务重试不重复计，失败、录音取消、试听不计；多个工作账号归同一销售，不能按显示名去重。该指标不要求消息发送成功。 | MUST | E008 | 无 | AC-R003-01、AC-R003-02 |
| R004 | 新入口同时登记对应租户菜单库存和已有平台定义，稳定菜单身份、路由、名称、父级一致；菜单树显示/隐藏、排序、权限属性沿用现机制，配置只影响本租户。 | MUST | E001 E004 E006 | 保留既有租户配置 | AC-R004-01 |
| R005 | 查询仅在当前租户、授权部门与销售范围内；不改变原权限，数据和本地状态按租户+路由隔离。全租户入口不自动赋予变声配置或放开父菜单。 | MUST | E002 E004 E007 | 既有权限差异 | AC-R005-01 |
| R006 | 完整零次数、无结果、加载中、失败/重试、无权限分别表达；加载/失败不能冒充零；旧条件在新查询完成前保留，取消不提交，重复查询不增加使用次数。 | MUST | E004 E005 | 无 | AC-R006-01 |
| R007 | 仅实现现有静态 HTML 原型与本地 Mock；筛选按 R002 完整复用当前销售使用统计；数值对齐和分页保留已批准功能，合成数据有来源标识，不承诺实时后端或修改真实菜单。 | MUST | E004 E005 E010 E011 E012 | 各租户独立样本 | AC-R007-01 |

### 6.1 不变量

- INV001：租户 A 的次数、人员和菜单配置不能出现在租户 B。
- INV002：刷新、查询、导出、试听不会增加统计值。
- INV003：同一独立任务最多贡献 1 次；统计次数是非负整数，失败/未知不得伪装成 0。
- INV004：数据展示新增菜单必有对应管理项；隐藏不等于从完整库存移除。
- INV005：本地演示不写真实后台；所有租户有入口不代表所有租户/账号已配置变声。

### 6.2 默认值与配置

| 参数 | 默认值 | 配置粒度 | 来源 | 是否可改 |
|---|---|---|---|---|
| 日期模式 | 单日 | 页面 | E012，当前销售使用统计 | 是 |
| 统计时间 | 今天；Asia/Shanghai 自然日，本页合成数据仍以运行日为基准 | 页面 | E001 E003 E012 | 是 |
| 部门 | 全部授权部门 | 租户 | E003 E004 | 是 |
| 菜单位置 | 销售使用统计之后 | 租户 | E001，布局复用选择 | 继承菜单排序 |
| 原型表格分页 | 20 条，沿用现组件可选页大小 | 页面 | E003 当前本地组件 | 是 |
| 计数口径 | R003 已批准，见 Q001 | 全局语义 | E008 | 已冻结 |

## 7. 状态与交互

### 7.1 状态模型

| 当前状态 | 事件 | 条件 | 下一状态 | 用户反馈 | 规则 |
|---|---|---|---|---|---|
| 初始 | 打开 | 菜单/权限允许 | 单日今天结果 | 显示查询与合成样本 | R001 R002 |
| 已展示 | 切换日期模式 | 非加载 | 未提交单日/范围 | 日期输入随模式显示；切回单日归为开始日 | R002 |
| 已展示 | 快捷日 | 非加载 | 目标日查询结果 | 同使用统计即时查询、选中反馈 | R002 |
| 已展示 | 编辑条件 | 合法 | 未提交条件 | 等待搜索 | R002 |
| 已展示 | 搜索 | 日期非法 | 原结果+校验 | 开始日期不能晚于结束日期 | R002 |
| 已展示 | 搜索 | 合法 | 加载→结果/空/失败 | 加载反馈、重试入口 | R006 |
| 失败 | 重试 | 沿用已提交条件 | 加载→结果 | 不改变查询口径 | R006 |
| 菜单编辑 | 取消/Escape | 任意 | 原配置 | 不写本地状态 | R004 |
| 菜单编辑 | 确认 | 合法 | 新本地配置 | 同租户侧栏更新 | R004 |

### 7.2 状态覆盖矩阵

| 对象 | rest | hover / pressed | focus | selected | disabled | loading | empty | error | overflow | permission |
|---|---|---|---|---|---|---|---|---|---|---|
| 查询和导出 | 有 | 有 | 有 | 条件可见 | 加载期间 | 有 | 无结果 | 日期/读取错误 | 窄窗滚动 | 继承 |
| 次数表格 | 有 | 排序 | 键盘可操作 | 排序状态 | 非编辑 | 有 | 独立空态 | 独立失败 | 数值不截断 | 继承 |
| 菜单树/编辑 | 有 | 有 | 有 | 展开/单选 | 继承 | N/A 本地同步 | 库存保留 | 字段校验 | 内部滚动 | 继承 |

### 7.3 进入、退出与恢复

从侧栏或现有页签进入；关闭/重开沿用 Shell。日期/部门草稿及模式切换不提前刷新结果；搜索提交合法条件。快捷日关闭日历、同时更新起止日并立即查询；当前范围模式可保留并呈现同日起止，与使用统计一致。重置回单日、今天、全部部门和默认排序并立即查询。日历 Escape / 外部点击取消不提交；刷新不会累计次数，菜单本地覆盖按原机制恢复。失败沿用已提交条件重试。只读统计无删除和业务保存。

### 7.4 文案合同

| 场景 | 文案 | 原因 | 禁止写法 |
|---|---|---|---|
| 标题 | 销售变声统计 | 按用户命名 | 销售使用统计复用旧标题 |
| 核心指标 | 变声使用次数 | 明确次数 | 消息数/使用人数 |
| 口径提示 | 按成功生成的独立变声任务计次；失败、试听及同一任务重试不重复计数。 | Q001 已通过 | 未审核即宣称官方口径 |
| 空查询 | 暂无数据 | 无匹配行 | 加载失败用暂无数据 |
| 失败 | 加载失败，请重试 | 可恢复 | 默认显示全部 0 |
| 来源 | 合成演示数据 | 与真实使用量区分 | 实时统计 |

## 8. 数据、权限与隐私

### 8.1 展示数据

| 字段 | 来源 | 必填 | 空值表现 | 示例 | 敏感性 |
|---|---|---|---|---|---|
| 序号 | 查询结果 | 是 | 不适用 | 1 | 普通 |
| 销售 | 本租户合成销售身份 | 是 | 无身份不伪造归属 | 销售甲 | 员工标识，演示使用假名 |
| 部门 | 本租户事件归属部门 | 是 | 未分配 | 咨询部 | 组织信息 |
| 变声使用次数 | R003 聚合 | 是 | 未能统计不能填 0 | 12 | 普通统计 |

本地事件依据包括 tenantId、salesId、departmentId、taskId、首次成功时间、状态；仅用合成事件验证，不存语音内容、客户身份、真实联系方式。时间范围采用含首日零点、排除末日次日零点，界面表现为含首尾自然日。

### 8.2 权限

沿用 051 已有菜单/父级可见性及权限表现，不新建角色或跨部门授权；菜单管理只由当前已有可操作角色编辑。隐藏入口不是新的服务端安全保证，本原型不宣称实现真实鉴权。

### 8.3 隔离

统计和菜单状态使用稳定租户键，不按品牌名判断资格；相同销售显示名不合并。未配置账号没有新的变声事实，不能合成“真实使用”；明确的历史成功事实也不因当前配置变化而抹去。本轮 Mock 全为可区分来源的合成演示。

## 9. 端与租户差异

Base R001–R007 适用于所有已登记租户；仅品牌、销售、部门与已有菜单权限配置不同。六个艺星租户和九个其他租户业务口径相同。PC/APP 的发送及语音条保持原合同。本功能不授权后续自动扩展新的租户环境。

## 10. 原型实现契约

- **目标原型仓**：E:/AI 项目/佰智德三/碎银原型/suiyin-admin。
- **目标文件 / 路由**：prototype/_shell.html 导航使用的注册数据、admin-menu-state.js/菜单树数据、admin-content.html 与统计渲染组件；新增静态 route `salesVoiceStats`（实现选择，不是已存在的线上接口）。
- **复用**：当前 admin-sales-usage.js/css 的筛选结构、AdminUsageDatePicker、AdminControls 与共同样式；同步变声筛选，不改销售使用统计的数据及业务规则。
- **本地旧状态兼容**：新增菜单同时进入 navigation 的 menu/settings、十五份 content 的 menu 树和佰智德三 allMenu 平台定义；变更菜单数据版本，并针对新增 route 迁移已有 override.enabled，使旧浏览器也能获得新入口，保留原有菜单的隐藏/排序选择，不自动开启已隐藏父级。以现有菜单 parity 页面核验库存与树表一致。
- **状态和 Mock**：当日/跨日、两个部门、不同销售、重复任务成功回调、失败重试、零值、空结果、加载失败、菜单隐藏和恢复；全部合成并带来源标识。
- **运行边界**：static-html，只读取静态文件和本地状态；统计生成与导出不接线上 API。
- **预览入口**：复用本地 8169 服务，经确认可用后用 Chrome 打开 prototype/_shell.html?tenant=yestar-sz&page=salesVoiceStats，并与同租户 salesMessageUsage 对照及抽查非艺星租户。

### 10.1 规则到页面映射

| 规则 | 页面 / 组件 | 用户如何触发 | 如何验证 |
|---|---|---|---|
| R001 R004 | 侧栏、菜单树与平台菜单定义 | 打开/隐藏/恢复/排序 | 对应 AC，逐租户清单 |
| R002 R003 | 销售变声统计筛选与表格 | 查询/排序/导出 | 固定 Mock 复算 |
| R005 R006 | 查询状态与租户路由 | 切换租户/异常/重试 | 同名隔离与状态检查 |
| R007 | Chrome 页面和来源提示 | 视觉与交互核对 | 截图和实际操作 |

### 10.2 工程交付准备

- 当前状态：issued；源版本锁定 SPEC-SUIYIN-ADMIN-052@1.2.0。
- [Issue Handoff](issue-handoff.md) / [Test Contract](test-contract.md)：I001 仅承接销售变声统计工程实现及该页冻结，目标 PetWebOrg/suiyin-admin，负责人陈宣宇（cxy-chenxuanyu）。
- 提出环境：深圳艺星；提出人：ZHONG；平台：PC管理网页。十五租户仅为本静态原型证据清单；工程按用户“所有租户”原意覆盖生产注册表中的全部适用租户，保持既有资格和授权，不以原型键设生产白名单。
- 真实 Issue：[工程实现 Issue](https://github.com/PetWebOrg/suiyin-admin/issues/401)。原型设计 Issue #389 仅关联背景，不代替本工程建单。
- 本页冻结辅助合同：SPEC-SUIYIN-ADMIN-055@1.1.0 的 R005 / AC-R005-01/02；I001 不承接全管理页工程改造。
- 事件/接口接入是工程前置核实项，不从普通消息量或合成 Mock 推断真实变声次数；本工作区不自动创建后端 Issue。
- 数据/计数用固定合成事实校验；视觉、菜单取消/焦点需要人工观察。验证强度按静态原型边界，不新增生产级测试体系。

## 11. 非目标与约束

本规格固化当前变声功能，E012 授权本轮筛选调整；统计次数含义已由 Q001 确认。只读页面借鉴不等于访问真实业务数据授权。DR-095、租户/菜单配置和既有未提交改动保持。本轮完整原型发布、销售变声统计工程 Issue 与指派已由最新 USER 指令明确授权；生产写入及正式实现仍不在本原型工作区范围。

## 12. 待确认问题

| Q-ID | 问题 | 推荐答案 | 影响 | 阻塞? | 状态 / 结论 |
|---|---|---|---|---|---|
| Q001 | 使用一次按成功生成的独立变声任务计 1，失败、试听和同任务重试不重复计，并按本规格做原型，是否通过？ | 通过；若目标是尝试量，可改为每次发起处理均计 1，另行调整口径 | R003、日期归属及表格说明，需统一确认 | 否 | closed：2026-09-20 房总“按这个方案做”，采用推荐计数口径及完整方案 |

## 13. 房总审核

- [x] 功能名称、数据展示位置与所有租户范围由 E001/E002 明确。
- [x] 菜单管理同步的长期规则由 E001 明确，DR-095 可直接记录。
- [x] Q001 次数提案与相关验收已确认。
- [x] 日期/部门复用及状态/权限方案已随规格审核。
- [x] 精确依赖已锁定；生产实现不在本轮范围。
- [x] 可以进入 Prototype Plan。

**审核结论**：approved  
**审核人**：房总  
**审核日期**：2026-09-20  
**审核备注**：当前 1.2.0 的筛选变更直接来自 E012“销售变声统计上面的筛选，保持和销售使用统计完全一致”，明确覆盖旧日期模式例外；原计数方案仍来自“按这个方案做”。记录用户直接执行指令，不声称用户另行逐字审阅生成文件。

## 14. 变更历史

| 版本 | 日期 | 作者 | 变化 | 原因 |
|---|---|---|---|---|
| 0.1.0 | 2026-09-20 | Codex | 固化所有十五租户范围、菜单同步与计数提案 | 用户新增功能与范围纠偏 |
| 1.0.0 | 2026-09-20 | Codex / 房总批准 | Q001 关闭，计数口径冻结并开始静态原型实现 | 房总“按这个方案做” |
| 1.0.0 实施记录 | 2026-09-20 | Codex | 静态页面及菜单联动实现；324 项结构/计数/DOM 检查通过，18 项 HTTP 通过；Chrome 视觉待验证 | 浏览器控制持续连接失败，不标为 verified |
| 1.1.0 | 2026-09-20 | 房总纠偏 / Codex | 移除日期模式选择，日期区间常显；搜索/筛选/表格/分页继承销售使用统计共享样式 | E009，用户明确修改指令 |
| 1.1.0 复验记录 | 2026-09-20 | Codex | 日期区间与共享控件修正；84项DOM/计算样式、96项计数、18项HTTP通过 | Chrome控制连接失败，视觉仍待验证 |
| 1.1.1 | 2026-09-20 | 房总授权 / Codex | 对齐修正后的参照：蓝色主按钮、计数右对齐、直接区间日历；口径与分页不变 | E010，052先前参照基准失真 |

| 1.1.2 | 2026-09-20 | 房总纠偏 / Codex | 以使用统计直接截图替代其他路由蓝色临时基准；主操作 #00c4af，R/AC及业务口径不变 | E011，像素纠偏后明确完整推送 |

| 1.2.0 | 2026-09-20 | 房总直接指令 / Codex | R002 恢复单日/范围并完整复用使用统计筛选；补 AC-R002-03，计数/数据/租户/菜单保持 | E012，覆盖旧直接区间特例 |

| 1.2.0 交付收口 | 2026-09-20 | 房总直接指令 / Codex | 当前文档与远端合同收敛；生成 I001 Handoff/Test Contract，工程建单 metadata 固定 | E013，不修改 R/AC 业务口径 |
